# modcam-python

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  README.md  build.sh  pyproject.toml  vcpkg.json
.github/workflows/: check-cpp-format.yml  check-py-format.yml  create-release.yml  publish-package.yml  static-analysis.yml  unit-tests.yml  wheels.yml
cmake/: check_python_venv.cmake
docs/: CONTRIBUTING.rst  conf.py  index.rst
scripts/: bindings_boilerplate.py
src/: CMakeLists.txt  bind_mesh.cpp  bind_modcam.cpp
src/py_modcam/mesh/: per_vertex_basis_pro2024.cpp  per_vertex_normals_max1999.cpp  principal_curvature_rus2004.cpp  voronoi_area.cpp  voronoi_area_mey2003.cpp
tests/mesh/: test_per_vertex_basis.py  test_per_vertex_normals.py  test_principal_curvature.py  test_voronoi_area.py
tools/: bindings_boilerplate.py
tools/cmake/: check_python_venv.cmake
tools/scripts/: cibw-install-tools-linux.sh
