# This file is part of modCAM, open source software for Computer Aided
# Manufacturing research.
# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
# SPDX-FileCopyrightText: Copyright contributors to the modCAM project.
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = [
    "nanobind >= 1.3.2",
    "numpy >=2.0.0; python_version >= '3.9'",
    "numpy; python_version < '3.9'",
    "scikit-build-core >= 0.10",
    "typing-extensions",
]
build-backend = "scikit_build_core.build"

[project]
name = "modcam"
version = "2025.03.02"
description = "Free and open source software for Computer Aided Manufacturing (CAM) research"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Manufacturing",
	"Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/modCAM/modcam-python"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "ruff"
]
test = [
    "libigl",
    "pooch",
    "pytest",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake]
build-type = "Release"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
