# This file is part of modCAM, open source software for Computer Aided
# Manufacturing research.
# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
# SPDX-FileCopyrightText: Copyright contributors to the modCAM project.
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "modcam"
description = "Free and open source software for Computer Aided Manufacturing (CAM) research"
dynamic = ["version"]
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Manufacturing",
	"Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.scikit-build]
cmake.args = [
	"-DCMAKE_TOOLCHAIN_FILE=/path/to/vcpkg/scripts/buildsystems/vcpkg.cmake",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "external/modcam/include/VERSION"
regex = '''(?P<value>\d+\.?\d*)'''
